[gd_scene load_steps=5 format=3 uid="uid://c7qxw7acijfwv"]

[ext_resource type="Script" uid="uid://dhhimlby7oykg" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_dock_main/smp_dock_container.gd" id="1_24cmw"]
[ext_resource type="PackedScene" uid="uid://cxga7wckey7c1" path="res://addons/script_multi_plus/smp_scenes/smp_dock_item_bar.tscn" id="2_3vhew"]
[ext_resource type="PackedScene" uid="uid://cvpima6mpusll" path="res://addons/script_multi_plus/smp_scenes/smp_code_notepad.tscn" id="2_norrt"]
[ext_resource type="Script" uid="uid://cirgrfwex8qaq" path="res://addons/script_multi_plus/smp_scripts/smp_dock/smp_dock_main_misc/smp_dock_vbox.gd" id="2_vhttf"]

[node name="MContainer" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_24cmw")

[node name="VRoot" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DockItemBar" parent="VRoot" instance=ExtResource("2_3vhew")]
unique_name_in_owner = true
layout_mode = 2

[node name="DockVBox" type="VBoxContainer" parent="VRoot"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_vhttf")

[node name="NotepadContainer" parent="VRoot" instance=ExtResource("2_norrt")]
unique_name_in_owner = true
layout_mode = 2
